--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -74,7 +74,7 @@
          document.getElementById("th2").innerHTML=obj[0].level2;
       }
       };
-      xhttp.open("GET", "http://localhost:3000/update", true);
+      xhttp.open("GET", "https://cn-grp3.herokuapp.com/update", true);
       xhttp.send();
   }, 500)
       
