recent record ejs changed

--- a/views/pages/recent_record.ejs
+++ b/views/pages/recent_record.ejs
@@ -74,7 +74,7 @@
       </style>
     </head>
     <body>
-     <h2 style="text-align:center;">All Vehicle Data</h2>
+     <h2 style="text-align:center;">Recent Vehicle Data</h2>
    
      <br>
      <br>
@@ -99,7 +99,7 @@
       <td><%= i++ %></td>
       <td><%= item.number_p %></td>
       <td><%= item.speed %></td>
-      <td><%= item.date %></td>
+      <td><%= item.sdate %></td>
       </tr>
       <% }) %>
     </table>
